Prevent code element from overflowing

--- a/themes/hydeout/static/css/hydeout.css
+++ b/themes/hydeout/static/css/hydeout.css
@@ -251,6 +251,7 @@ code {
   color: #bf616a;
   font-size: 85%;
   padding: 0.25em 0.5em;
+  word-break: break-word;
 }
 
 pre {
